--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ keywords = ["rfc", "rfc_lookup"]
 Changelog = "https://github.com/xransum/rfc-lookup/releases"
 
 [tool.poetry.scripts]
-rfc = "rfc_lookup.command:cmd"
+rfc = "rfc_lookup.command:main"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 click = "^8.1.8"
-importlib-metadata = {version = "^8.6.1", python = "<3.8"}
+importlib-metadata = { version = "^8.6.1", python = "<3.8" }
 
 [tool.poetry.group.dev.dependencies]
 nox = ">=2020.8.22"
