Fix installation command for Nox-Poetry in GitHub Actions workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,10 +62,10 @@ jobs:
         run: |
           pipx install --pip-args=--constraint="${{ github.workspace }}/.github/workflows/constraints.txt" nox
           nox --version
-
-      - name: Install nox-poetry
+          
+      - name: Install Nox-Poetry
         run: |
-          pipx install --pip-args=--constraint="${{ github.workspace }}/.github/workflows/constraints.txt" nox-poetry
+          pip install --constraint="${{ github.workspace }}/.github/workflows/constraints.txt" nox-poetry
 
       - name: Compute pre-commit cache key
         if: matrix.session == 'pre-commit'
