--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -155,4 +155,7 @@ jobs:
           nox --session=coverage -- xml
 
       - name: Upload coverage report
-        uses: codecov/codecov-action@v3.1.4
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: xransum/rfc-lookup
