--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,12 +97,17 @@ jobs:
         run: |
           nox --python=${{ matrix.python }}
 
+      - name: List files for debugging
+        if: always() && matrix.session == 'tests' && matrix.os == 'ubuntu-latest'
+        run: |
+          ls -la
+
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
         uses: actions/upload-artifact@v4
         with:
           name: coverage-data
-          path: ".coverage.*"
+          path: .coverage.*
 
       - name: Upload documentation
         if: matrix.session == 'docs-build'
