--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -107,7 +107,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-data
-          path: ./.coverage.*
+          path: .coverage.*
+          include-hidden-files: true
 
       - name: Upload documentation
         if: matrix.session == 'docs-build'
