--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,8 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3.5.3
+        with:
+          clean: true
 
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4.6.1
