--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,3 @@
-# .github/workflows/tests.yml
 name: Tests
 
 on:
@@ -120,6 +119,8 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3.5.3
+        with:
+          clean: true
 
       - name: Set up Python
         uses: actions/setup-python@v4.6.1
