--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -103,7 +103,7 @@ jobs:
         if: always() && matrix.session == 'tests'
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-data-${{ matrix.python }}
+          name: coverage-data-${{ runner.os }}-${{ matrix.python }}
           path: .coverage.*
           include-hidden-files: true
 
