--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -150,8 +150,9 @@ jobs:
       - name: Download coverage data
         uses: actions/download-artifact@v4
         with:
-          name: coverage-data
-          pattern: coverage-*
+          name: coverage-data-*
+          pattern: coverage-data-*
+          merge-multiple: true
 
       - name: Combine coverage data and display human readable report
         run: |
